# sengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LICENSES/: README.md
doc/: environment.md
src/: CMakeLists.txt  main.cpp  requirements.txt
src/database/: CMakeLists.txt  DataBase.cpp  DataBase.h  mysql_pool.h  redis_pool.h
src/database/sql/: create_database.sql
src/evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h
src/indexBuilder/: CMakeLists.txt  InvertedIndex.h  indexBuilder.cpp  indexBuilder.h
src/libs/: CMakeLists.txt
src/libs/bundle/: CMakeLists.txt
src/libs/kafka/: CMakeLists.txt  KafkaProducer.h  Types.h
src/se_crawler_dir/: __init__.py  crawlerServer.py  scrapy.cfg
src/se_crawler_dir/se_crawler/: items.py  middlewares.py  pipelines.py  settings.py
src/se_crawler_dir/se_crawler/spiders/: cnblogSpider.py  csdnSpider.py
src/searcher/: CMakeLists.txt  searcher.cpp  searcher.h
src/utils/: CMakeLists.txt
src/utils/configParser/: CMakeLists.txt  __init__.py  configParser.cpp  configParser.h  configParser.py
src/utils/encoding/: CMakeLists.txt
src/utils/encoding/base64/: CMakeLists.txt  base64.cpp  base64.h
src/utils/exception/: exception.py
src/utils/kafka/: CMakeLists.txt  kafka_client.cpp  kafka_client.h
src/utils/kafka-cpp/: kafka_client.cpp
src/utils/kafka_py/: __init__.py  client.py
src/utils/logger/: CMakeLists.txt  log.py  logger.cpp  logger.h
src/utils/queue/: CMakeLists.txt  queue.h
src/utils/utf/: CMakeLists.txt  utf.cpp  utf.h
src/webapi/: webapi.py
src/wordSplit/: sEngine_dict.txt  wordSplit.py  wordSplitServer.py
toolchain/: README.md  example_config.ini
